force-app/main/default/objects/Compliance_Alert__c/fields/Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Date__c</fullName>
    <label>Alert Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>