force-app/main/default/objects/Compliance_Alert__c/fields/Alert_Name__c.field-meta.xml
<CustomField>
    <fullName>Alert_Name__c</fullName>
    <label>Alert Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>