force-app/main/default/objects/Compliance_Alert__c/fields/App_Alert_Id__c.field-meta.xml
<CustomField>
    <fullName>App_Alert_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App Alert</label>
    <referenceTo>AppAlert</referenceTo>
    <relationshipLabel>Compliance Alerts</relationshipLabel>
    <relationshipName>Compliance_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>