force-app/main/default/objects/Compliance_Alert__c/fields/Corrective_Verbiage__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Verbiage__c</fullName>
    <label>Corrective Verbiage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>