force-app/main/default/objects/Compliance_Alert__c/fields/Detected_Violation__c.field-meta.xml
<CustomField>
    <fullName>Detected_Violation__c</fullName>
    <label>Detected Violation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>