force-app/main/default/objects/Compliance_Alert__c/fields/Matched_Content__c.field-meta.xml
<CustomField>
    <fullName>Matched_Content__c</fullName>
    <label>Matched Content</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>