force-app/main/default/objects/Compliance_Alert__c/fields/Original_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Value__c</fullName>
    <label>Original Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>