force-app/main/default/objects/Compliance_Alert__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule</label>
    <referenceTo>Compliance_Rule__c</referenceTo>
    <relationshipLabel>Compliance Alerts</relationshipLabel>
    <relationshipName>Compliance_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>