force-app/main/default/objects/Compliance_Alert__c/fields/SOP_Reference__c.field-meta.xml
<CustomField>
    <fullName>SOP_Reference__c</fullName>
    <label>SOP Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>